<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ic_video_game"
        android:enabled="true"
        android:icon="@drawable/ic_video_game"
        app:cnb_textColor = "@color/white"
        app:cnb_iconColor = "@color/white"
        app:cnb_backgroundColor="@color/accent"
        android:title="@string/top_100"/>
    <item
        android:id="@+id/ic_favorite"
        android:icon="@drawable/ic_favorite"
        app:cnb_textColor = "@color/white"
        app:cnb_iconColor = "@color/white"
        app:cnb_backgroundColor="@color/accent"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/ic_settings"
        android:icon="@drawable/ic_settings"
        app:cnb_textColor = "@color/white"
        app:cnb_iconColor = "@color/white"
        app:cnb_backgroundColor="@color/accent"
        android:title="@string/settings"/>
</menu>