<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/topFragment">

    <fragment
        android:id="@+id/topFragment"
        android:name="com.example.worldofgames.screens.games.fragments.TopFragment"
        android:label="@string/nav_top_100"
        tools:layout="@layout/fragment_top" >
        <action
            android:id="@+id/action_topFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_topFragment_to_favouriteFragment"
            app:destination="@id/favouriteFragment" />
        <action
            android:id="@+id/action_topFragment_to_settingsFragment2"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.worldofgames.screens.games.fragments.FavouriteFragment"
        android:label="@string/nav_favourite"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_favouriteFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_favouriteFragment_to_topFragment"
            app:destination="@id/topFragment" />
        <action
            android:id="@+id/action_favouriteFragment_to_settingsFragment2"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.worldofgames.screens.games.fragments.DetailFragment"
        android:label="@string/nav_about_game"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.worldofgames.screens.games.fragments.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment2_to_topFragment"
            app:destination="@id/topFragment" />
        <action
            android:id="@+id/action_settingsFragment2_to_favouriteFragment"
            app:destination="@id/favouriteFragment" />
    </fragment>

</navigation>